--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
+    "react-pdf": "^6.2.2",
     "react-router-dom": "^6.8.0",
     "react-scripts": "^2.1.3",
     "uikit": "^3.15.24",
