--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.0",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
